worked on photos layout

--- a/Anul 3/Dezvoltare aplicatii web Flickr/demo.css
+++ b/Anul 3/Dezvoltare aplicatii web Flickr/demo.css
@@ -35,6 +35,8 @@ body {
 
 .frame > img { width: 100%; }
 
+.frame > a > img { width: 100%; }
+
 #controls { margin-bottom: 40px; }
 
 #controls button {
