--- a/Anul 3/Dezvoltare aplicatii web Flickr/demo.css
+++ b/Anul 3/Dezvoltare aplicatii web Flickr/demo.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     margin: 0;
-    padding: 10px 20px;
+    padding: 100px 0px;
 }
 
 #content {
@@ -138,11 +138,80 @@ body {
     }
 
 #description {
-    clear: left; 
+    clear: left;
     text-align: left;
 }
+
 #category {
     float: left;
-    color:royalblue;
-    font-weight:700;
+    color: royalblue;
+    font-weight: 700;
+}
+
+
+.navbar {
+    display:block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #2b303b;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+}
+
+.navbarUl {
+    float:left;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
+
+.navbarUlRight {
+    float: right;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
+
+.navbarButtonLi {
+    float: left;
+}
+
+    .navbarButtonLi a, .navbarButton a {
+        display: block;
+        height: 50px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+        .navbarButtonLi a:hover:not(.active) {
+            background-color: #111;
+        }
+
+.navbarButton {
+    float: right;
+}
+
+    .navbarButton a:hover:not(.active) {
+        background-color: #111;
+    }
+
+.active {
+    background-color: #4CAF50;
+}
+
+.search {
+    display: inline-block;
+    margin-left:400px;
+}
+
+.page {
+    margin:100px
 }
